Quartz sync: Feb 20, 2024, 10:10 PM

--- a/content/タヌキの学名の由来.md
+++ b/content/タヌキの学名の由来.md
@@ -15,5 +15,10 @@ Nyctereutes procyonoides
 >
 > http://tokyotanuki.jp/encyclopedia/basis.htm
 
-
+なんか色々と間違っている気がする
 少なくとも「-oides」は古いという意味ではない
+
+---
+
+- *Nyctereutes procyonoides* (Gray  1834)
+	- ジョン・エドワード・グレイが1834年に*Canis  procyonoides*として記載
