Quartz sync: Feb 20, 2024, 10:22 PM

--- a/content/タヌキの学名の由来.md
+++ b/content/タヌキの学名の由来.md
@@ -22,3 +22,12 @@ Nyctereutes procyonoides
 
 - *Nyctereutes procyonoides* (Gray  1834)
 	- ジョン・エドワード・グレイが1834年に*Canis  procyonoides*として記載
+	- https://www.biodiversitylibrary.org/page/58222020
+	- この巻の1枚目のプレートがタヌキ
+	- 英語名として「RACOON FACED DOG」と記されている通り、*procyonoides*は「アライグマ（procyon）に似たもの」の意味
+	- もちろん[[アライグマ|アライグマ属]]（*Procyon*属）の由来は
+- *Nyctereutes* Temminck, 1838
+	-  1838年にコンラート・ヤコブ・テミンクが記載
+
+> [!CITE] [Temminck (1838)](https://www.biodiversitylibrary.org/page/13475079)  *Tijdschrift voor natuurlijke geschiedenis en physiologie*, 5: 285.
+> De opmerkelijkste soort van deze familie is onze *Canis viverrinus*, in alle opzigten gelijkvormig aan den *Canis procgonides* van Sina, doch door de verwen zijner huid genoegzaam ven dezen afwijkende, om er eene nieuwe soort van te maken. Deze twee kleine honden, wier kleed in den zomer anders is, dan in den winter, leveren nog eene kleine anomalie op in hun tandenstelsel. Zij vormen eene kleine afdeeling, welke den *Procyons* van Amerika en het geslacht *Viverra* van Indie zeer nabij komt: soorten, welke van het geslacht *Canis* afgescheiden, en in eene kleine groep, onder den naam van *Nyctereutes* zouden kunnen vereenigd worden.
