Quartz sync: Feb 20, 2024, 11:00 PM

--- a/content/雷竜の由来は雷馬？.md
+++ b/content/雷竜の由来は雷馬？.md
@@ -1,10 +1,10 @@
-> [!CITE]
-> [https://twitter.com/shiryu03080/status/1688912286508023808 @shiryu03080]: タケルライコ、珍妙な見た目だけど筋通してていいな……
+> [!CITE]  https://twitter.com/shiryu03080/status/1688912286508023808 @shiryu03080
+> タケルライコ、珍妙な見た目だけど筋通してていいな……
 > 映像より公式イラストのがデザインの意図伝わってきて良いね
 > ![](https://pbs.twimg.com/media/F3A4w4zboAE2ClI.jpg)![](https://pbs.twimg.com/media/F3A4xWtbQAAu16c.jpg)
 
-> [!CITE]
->[https://twitter.com/batapys1/status/1688916564794597376 @batapys1]: ちょっと待って、前提になってる「雷馬」って存在も初耳なんだけど
+> [!CITE] https://twitter.com/batapys1/status/1688916564794597376
+> ちょっと待って、前提になってる「雷馬」って存在も初耳なんだけど
 >![](https://pbs.twimg.com/media/F3A8qeGbsAIrWy_.jpg)
 
 
