Quartz sync: Feb 20, 2024, 11:17 PM

--- a/content/雷竜の由来は雷馬？.md
+++ b/content/雷竜の由来は雷馬？.md
@@ -1,3 +1,9 @@
+---
+tags: ポケモン
+---
+
+[[ポケットモンスター スカーレット・バイオレット|ポケモンSV]]のDLCの発表でタケルライコが初公開されたときの反応
+
 > [!CITE]  https://twitter.com/shiryu03080/status/1688912286508023808 @shiryu03080
 > タケルライコ、珍妙な見た目だけど筋通してていいな……
 > 映像より公式イラストのがデザインの意図伝わってきて良いね
