Quartz sync: Feb 21, 2024, 8:46 PM

--- a/content/タヌキの学名の語源.md
+++ b/content/タヌキの学名の語源.md
@@ -1,5 +1,6 @@
 
-[[タヌキ]]の[[学名]]は*Nyctereutes procyonoides*である
+[[タヌキ]]の[[学名]]の[[由来]]
+種名は*Nyctereutes procyonoides*である
 
 > [!CITE] https://bsky.app/profile/traffickerg.bsky.social/post/3klqt5g7ult2h
 > そう言えばタヌキの学名「Nyctereutes procyonoides」は日本語に訳すると「夜をさまよう古い犬」で大変カッコイイという話をブルスコでもしておきます。 いつかこれでピカレスクを書きたい。
