--- a/content/雷竜の語源は雷馬？.md
+++ b/content/雷竜の語源は雷馬？.md
@@ -2,17 +2,19 @@
 tags: ポケモン
 ---
 
+"雷竜"（[[ブロントサウルス]]または[[竜脚類]]全体の愛称）の[[語源]]
 [[ポケットモンスター スカーレット・バイオレット|ポケモンSV]]のDLCの発表でタケルライコが初公開されたときの反応
 
-> [!CITE]  https://twitter.com/shiryu03080/status/1688912286508023808 @shiryu03080
-> タケルライコ、珍妙な見た目だけど筋通してていいな……
-> 映像より公式イラストのがデザインの意図伝わってきて良いね
-> ![|300](https://pbs.twimg.com/media/F3A4w4zboAE2ClI.jpg)![|300](https://pbs.twimg.com/media/F3A4xWtbQAAu16c.jpg)
+> [!CITE] お行儀が悪くてサブ垢なやつ (@shiryu03080) [August 8, 2023](https://twitter.com/shiryu03080/status/1688912286508023808?ref_src=twsrc%5Etfw)
+> タケルライコ、珍妙な見た目だけど筋通してていいな……  
+> 映像より公式イラストのがデザインの意図伝わってきて良いね ![pic.twitter.com/d5gbAXxTEZ](https://pbs.twimg.com/media/F3A4w4zboAE2ClI?format=jpg)![](https://pbs.twimg.com/media/F3A4xWtbQAAu16c?format=jpg)
 
-> [!CITE] https://twitter.com/batapys1/status/1688916564794597376
-> ちょっと待って、前提になってる「雷馬」って存在も初耳なんだけど
->![|300](https://pbs.twimg.com/media/F3A8qeGbsAIrWy_.jpg)
+%%![[Pasted image 20240221203740.png|10]]![[Pasted image 20240221203851.png|10]]%%
 
+> [!CITE] 違法バタピー (@batapys1) [August 8, 2023](https://twitter.com/batapys1/status/1688916564794597376?ref_src=twsrc%5Etfw)
+> ちょっと待って、前提になってる「雷馬」って存在も初耳なんだけど ![pic.twitter.com/gv18hIn2Eb](https://pbs.twimg.com/media/F3A8qeGbsAIrWy_?format=jpg)
+
+%%![[Pasted image 20240221204048.png|10]]%%
 
 -  「雷竜という名称の由来は雷馬である」という話は、Pixiv百科事典の記事のほかには見当たらない
 - もしかすると[[ブロントテリウム]]の名称の由来の逸話と混同されているのかもしれない
