Quartz sync: Feb 21, 2024, 11:56 PM

--- a/content/雷竜の語源は雷馬？.md
+++ b/content/雷竜の語源は雷馬？.md
@@ -2,8 +2,8 @@
 tags: ポケモン
 ---
 
-"雷竜"（[[ブロントサウルス]]または[[竜脚類]]全体の愛称）の[[語源]]
-[[ポケットモンスター スカーレット・バイオレット|ポケモンSV]]のDLCの発表でタケルライコが初公開されたときの反応
+- "雷竜"（[[ブロントサウルス]]または[[竜脚類]]全体の愛称）の[[語源]]
+- [[ポケットモンスター スカーレット・バイオレット|ポケモンSV]]のDLCの発表でタケルライコが初公開されたときの反応
 
 > [!CITE] お行儀が悪くてサブ垢なやつ (@shiryu03080) [August 8, 2023](https://twitter.com/shiryu03080/status/1688912286508023808?ref_src=twsrc%5Etfw)
 > タケルライコ、珍妙な見た目だけど筋通してていいな……  
