Quartz sync: Feb 22, 2024, 12:12 AM

--- a/content/ホタルイカモドキ科.md
+++ b/content/ホタルイカモドキ科.md
@@ -15,8 +15,8 @@
 - *Watasea*
 	- https://www.biodiversitylibrary.org/page/30145055
 - *Watasenia* Ishikawa, 1914 〈[[ホタルイカ属]]〉
-	- [Zoologischer Anzeiger, 43 (7): 336](https://www.biodiversitylibrary.org/page/30145229)
-		- > Anzeigers, ersucht Prof. C. Ishikawa, Tokio, um die möglichst baldige Mitteilung, daß der Name *Watasea* bereits an eine Fischgattung vergeben sei, weshalb der Name des betr. Genus der Cephalopoden von ihm in *Watasenia* (oder *Watasenella*) geändert werden würde. Weitere Mitteilung darüber wird er voraussichtlich selbst noch machen.
+	- > [!CITE] [Zoologischer Anzeiger, 43 (7): 336](https://www.biodiversitylibrary.org/page/30145229)
+	    > Anzeigers, ersucht Prof. C. Ishikawa, Tokio, um die möglichst baldige Mitteilung, daß der Name *Watasea* bereits an eine Fischgattung vergeben sei, weshalb der Name des betr. Genus der Cephalopoden von ihm in *Watasenia* (oder *Watasenella*) geändert werden würde. Weitere Mitteilung darüber wird er voraussichtlich selbst noch machen.
 - *Enoploteuthis chunii* Ishikawa, 1914 〈[[ホタルイカモドキ]]〉
 	- Journal of the College of Agriculture, Imperial University of Tokyo, 
 		- [Ishikawa (1914)](https://www.biodiversitylibrary.org/page/30242448)
