Quartz sync: Feb 22, 2024, 12:21 AM

--- a/content/竜弓類は誤訳.md
+++ b/content/竜弓類は誤訳.md
@@ -1,3 +1,9 @@
+---
+tags:
+  - 和名
+  - 学名
+  - 語源
+---
 
 - Sauropsida（[[竜弓類]]）の語源は、sauros 竜 + ops 顔 + -ida
 	- cf. *Tricecratops*の"-ops"、植物の綱階級の接尾辞 -opsida
