Quartz sync: Feb 22, 2024, 12:24 AM

--- a/content/竜弓類は誤訳.md
+++ b/content/竜弓類は誤訳.md
@@ -5,7 +5,7 @@ tags:
   - 語源
 ---
 
-- Sauropsida（[[竜弓類]]）の語源は、sauros 竜 + ops 顔 + -ida
+- Sauropsida（[[竜弓類]]）の[[語源]]は、sauros 竜 + ops 顔 + -ida
 	- cf. *Tricecratops*の"-ops"、植物の綱階級の接尾辞 -opsida
 - なので「蜥形類」とする（昔風の）訳の方が適切
 	- 例：『[[祖先の物語—ドーキンスの生命史]]』
