Quartz sync: Feb 22, 2024, 1:13 PM

--- a/content/タヌキの学名の語源.md
+++ b/content/タヌキの学名の語源.md
@@ -1,5 +1,5 @@
 
-[[タヌキ]]の[[学名]]の[[由来]]
+[[タヌキ]]の[[学名]]の[[語源]]
 種名は*Nyctereutes procyonoides*である
 
 > [!CITE] https://bsky.app/profile/traffickerg.bsky.social/post/3klqt5g7ult2h
