Quartz sync: Feb 23, 2024, 4:28 PM

--- a/content/twitter_log/2017/2017_12.md
+++ b/content/twitter_log/2017/2017_12.md
@@ -114,7 +114,7 @@ tags: twitter_log
 > 少なくともSpiralia（螺旋動物；広義の冠輪動物）に含まれるのは確実な雰囲気。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/943026450432532480 (2017-12-19 16:53:21)
-> 「Ambulacraria」に対する訳が「水腔動物」になっていると、ちょっとモヤモヤする。
+> 「Ambulacraria」に対する訳が「[[水腔動物|水腔動物]]」になっていると、ちょっとモヤモヤする。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/943027402371985408 (2017-12-19 16:57:07)
 > Ambulacrariaはambulacrumが元なので「歩帯動物」と、Coelomoporaはhydrocoelが元なので「水腔動物」と訳すべきだと思っているが、それが正しいのかは分からない。
