--- a/content/twitter_log/2018/2018_08.md
+++ b/content/twitter_log/2018/2018_08.md
@@ -168,7 +168,7 @@ tags: twitter_log
 > みたいな。だいぶ無理がありますけれども。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1030438406898122752 (2018-08-17 21:57:15)
-> RT @tapa46: 北（前口動物）の脱皮動物上門・冠輪動物上門と南（後口動物）の脊索動物上門・水腔動物上門を合わせて『ビラテリア四天王』って感じがしてカッコイイんだよ。
+> RT @tapa46: 北（前口動物）の脱皮動物上門・冠輪動物上門と南（後口動物）の脊索動物上門・[[水腔動物|水腔動物上門]]を合わせて『ビラテリア四天王』って感じがしてカッコイイんだよ。
 > どれにもポピュラーな分類群が所属してるしね。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1030439137696862208 (2018-08-17 22:00:09)
