--- a/content/twitter_log/2023/2023_06.md
+++ b/content/twitter_log/2023/2023_06.md
@@ -17,7 +17,7 @@ tags: twitter_log
 > たしかに。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1664652175866462208 (2023-06-03 00:16:21)
-> このあたりの初歩的な概念を揃えようとすると意外と大変だったりするけど、そういう意味でゆるふわ生物学のあつ森博物館回は便利だよねと思う。
+> このあたりの初歩的な概念を揃えようとすると意外と大変だったりするけど、そういう意味で[[ゆるふわ生物学|ゆるふわ生物学]]のあつ森博物館回は便利だよねと思う。
 > https://t.co/am3v4V0SUk
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1664653062928216064 (2023-06-03 00:19:52)
