--- a/content/twitter_log/2023/2023_07.md
+++ b/content/twitter_log/2023/2023_07.md
@@ -5,11 +5,13 @@ tags: twitter_log
 > [!CITE] https://twitter.com/kaisekiriu/status/1674983779679764480 (2023-07-01 12:30:27)
 > RT @ChannelYurufuwa: 「キノコと植物、ヒトに近いのはどっち？」
 > 
-> クイズやマンガで進化のフシギにせまる⁉️ゆるふわでガチガチな本が生まれました‼️📔
-> 自然選択の仕組みから収斂進化、ミュラー型擬態、真社会性まで、身近でディープな #ゆるふわ生物学 の世界へよう…
+> クイズやマンガで進化のフシギにせまる⁉️[[📕ナゾとき「進化論」|ゆるふわでガチガチな本]]が生まれました‼️📔
+> 自然選択の仕組みから収斂進化、ミュラー型擬態、真社会性まで、身近でディープな #ゆるふわ生物学 の世界へようこそ🦖
+#ナゾとき進化論
+> 予約▶️https://amazon.co.jp/dp/4046060239/
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1674983805252419584 (2023-07-01 12:30:33)
-> RT @ChannelYurufuwa: 残念ながら、進化に関しては誤った言説もはびこっています。「この生物は◯◯するために進化した」「生物は調和を守り助け合って生きている」「種が生き残るための巧みな戦略」こうした誤解を解くためのコラムも盛り込みました。 #ナゾとき進化論 #ゆ…
+> RT @ChannelYurufuwa: 残念ながら、進化に関しては誤った言説もはびこっています。「この生物は◯◯するために進化した」「生物は調和を守り助け合って生きている」「種が生き残るための巧みな戦略」こうした誤解を解くためのコラムも盛り込みました。 #ナゾとき進化論 #ゆるふわ生物学
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1674983864857690112 (2023-07-01 12:30:47)
 > よさそう。
@@ -361,7 +363,7 @@ tags: twitter_log
 > https://t.co/mNzQrscOnh
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1685964491497050112 (2023-07-31 19:43:53)
-> 『ナゾとき「進化論」』を読み終わりました。イラストが豊富で分かりやすいのはもちろんのこと、誤解されやすい事柄を含め細かな部分に目が行き届いた良書だと思いました。
+> 『[[📕ナゾとき「進化論」|ナゾとき「進化論」]]』を読み終わりました。イラストが豊富で分かりやすいのはもちろんのこと、誤解されやすい事柄を含め細かな部分に目が行き届いた良書だと思いました。
 > https://t.co/HIpapi80dJ
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1685964534950035456 (2023-07-31 19:44:03)
@@ -377,7 +379,7 @@ tags: twitter_log
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1685969998660165632 (2023-07-31 20:05:46)
 > p. 41
-> 水腔動物に「すいくうどうぶつ」とルビが振られています。私は「すいこうどうぶつ」派ですが、「体腔」の読み方にも派閥があるように、動物進化学者での傾向を調査すると面白いかもしれません（サンプルサイズが小さすぎる）。
+> [[水腔動物|水腔動物]]に「すいくうどうぶつ」とルビが振られています。私は「すいこうどうぶつ」派ですが、「体腔」の読み方にも派閥があるように、動物進化学者での傾向を調査すると面白いかもしれません（サンプルサイズが小さすぎる）。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1685971455891402752 (2023-07-31 20:11:33)
 > ちなみに普及度としては「水腔動物」の方が圧倒的ですが、個人的にはAmbulacrariaは「水腔動物」とは和訳すべきではないのかも？とも思っています。
