--- a/content/twitter_log/2022/2022_03.md
+++ b/content/twitter_log/2022/2022_03.md
@@ -259,7 +259,7 @@ tags: twitter_log
 > https://t.co/GkpNaNtjiX
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1502635124256813056 (2022-03-12 22:18:25)
-> Ambulacrariaを歩帯動物と訳すか水腔動物と訳すかによってXenambulacrariaの訳も変わってくるな。当たり前だけど。
+> Ambulacrariaを歩帯動物と訳すか[[水腔動物|水腔動物]]と訳すかによってXenambulacrariaの訳も変わってくるな。当たり前だけど。
 > https://t.co/rYH8AOEkUr
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1502635716433833984 (2022-03-12 22:20:47)
