Quartz sync: Feb 23, 2024, 4:56 PM

--- a/content/twitter_log/2018/2018_08.md
+++ b/content/twitter_log/2018/2018_08.md
@@ -284,7 +284,7 @@ tags: twitter_log
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1034823904190115840 (2018-08-30 00:23:39)
 > RT @tapa46: まずPIXIV大百科に硬派な生物学的内容を求めること自体が徒労のような気も。記事にもよるのでしょうが専門性やエビデンス、更新頻度はウィキペディアのほぼ下位互換ですし。
-> 記事内に出典不明の怪しげなゴシップが増えていくことは好ましくはないですが、そもそもなぜ…
+> 記事内に出典不明の怪しげなゴシップが増えていくことは好ましくはないですが、そもそもなぜ記事を作ったという。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1034824228577587200 (2018-08-30 00:24:56)
 > RT @kaisekiriu: 分類の枠組み（体系）は人それぞれだけれど、誰かにとって見慣れない生き物を紹介する時には、その生き物を含むタクソンやクレードの名前をすべて挙げていくわけにはいかない。
