--- a/content/twitter_log/2023/2023_07.md
+++ b/content/twitter_log/2023/2023_07.md
@@ -117,13 +117,13 @@ tags: twitter_log
 > そんな気もしてきた。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1676244337418735616 (2023-07-04 23:59:27)
-> 「偶然？必然？」に「どっちもだよ」と返す勇気。
+> 「偶然？必然？」に「[[🎵U・N・M・E・I ライブ|どっちもだよ]]」と返す勇気。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1676529324617523200 (2023-07-05 18:51:54)
-> RT @gotshu: 今井／秋田『言語の本質』中公新書を読んだので、感想と気になったところを書きました。 #note https://t.co/cizwGH3L8n
+> RT @gotshu: 今井／秋田『[[📕言語の本質|言語の本質]]』中公新書を読んだので、感想と気になったところを書きました。 #note https://t.co/cizwGH3L8n
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1676529437821779968 (2023-07-05 18:52:21)
-> 『言語の本質』を読み終わったので参考として。
+> 『[[📕言語の本質|言語の本質]]』を読み終わったので参考として。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1676530350439424000 (2023-07-05 18:55:58)
 > 読み終えて真っ先に思ったのは「せっかく帯にブーツのイラストを描くんだったらベルト式じゃなくて紐付きブーツの方が良かったのでは？」みたいなこと。
@@ -138,7 +138,7 @@ tags: twitter_log
 > それを補うものとしてニカラグア手話の事例が挙げられているのだとは思うけど、これも周囲に既存の言語が存在している状態からの進化なわけですからね。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1676536252068425728 (2023-07-05 19:19:25)
-> アブダクション推論がヒトには存在してチンパンジーには存在しない理由として生息域の広さ・多様性が仮説として提示されている（p. 245）けど、生息域の拡大によってアブダクションが適応的になったのか、それともアブダクションの獲得によって生息域の拡大が可能になったのか、どちらなんでしょうね。
+> [[アブダクション|アブダクション推論]]がヒトには存在して[[チンパンジー|チンパンジー]]には存在しない理由として生息域の広さ・多様性が仮説として提示されている（p. 245）けど、生息域の拡大によってアブダクションが適応的になったのか、それともアブダクションの獲得によって生息域の拡大が可能になったのか、どちらなんでしょうね。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1676538918693396480 (2023-07-05 19:30:01)
 > 誤：チンパンジーには存在しない
