--- a/content/twitter_log/2021/2021_12.md
+++ b/content/twitter_log/2021/2021_12.md
@@ -24,7 +24,7 @@ tags: twitter_log
 > Why be moral in animal research?
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1466355628079984640 (2021-12-02 19:36:39)
-> RT @Mushi_Kurotowa: 「種差別の禁止」を人間に系統関係が近いところから順に適応していくというのは、生態系管理という面では万能ではないし間違いを冒すと思うんだけど、そこの危機感がない人が多い。「自分が見てないところで人間から遠い生物が大量に死ぬ」ことが(議論が盛…
+> RT @Mushi_Kurotowa: 「[[種差別|種差別]]の禁止」を人間に系統関係が近いところから順に適応していくというのは、生態系管理という面では万能ではないし間違いを冒すと思うんだけど、そこの危機感がない人が多い。「自分が見てないところで人間から遠い生物が大量に死ぬ」ことが(議論が盛…
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1466355765795594240 (2021-12-02 19:37:12)
 > 「「種差別の禁止」を人間に系統関係が近いところから順に適応していく」と主張している人、果たして実在するのだろうか？
