Quartz sync: Feb 23, 2024, 6:25 PM

--- a/content/twitter_log/2023/2023_04.md
+++ b/content/twitter_log/2023/2023_04.md
@@ -64,7 +64,7 @@ tags: twitter_log
 > https://t.co/E3EEN13MAE
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1647203049029668864 (2023-04-15 20:39:45)
-> ホルスト・ブレーデカンプ『ダーウィンの珊瑚』
+> ホルスト・ブレーデカンプ『[[📕ダーウィンの珊瑚|ダーウィンの珊瑚]]』
 > https://t.co/3lGyNBnAmD
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1647204325058580480 (2023-04-15 20:44:49)
@@ -74,7 +74,7 @@ tags: twitter_log
 > RT @dubhejp: そして、展覧会図録は好評につき、売り切れる可能性が出ている様子。確実に図録が欲しい方は早めの来館か、美術館へ所定の方法にて現金書留で注文となります。2冊以上の注文は送料について要問い合わせとなってますね。過去の展覧会図録も気になる物あわせてどうぞ。…
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1648273932838146048 (2023-04-18 19:35:03)
-> これ、完全に私の記憶違いだったので訂正します。ダーウィンは『種の起源』を執筆するにあたって「樹」を受け入れたものの、それでもなおダイアグラムは「珊瑚」をモデルとした、というのが『ダーウィンの珊瑚』での主張です。
+> これ、完全に私の記憶違いだったので訂正します。ダーウィンは『種の起源』を執筆するにあたって「樹」を受け入れたものの、それでもなおダイアグラムは「珊瑚」をモデルとした、というのが『[[📕ダーウィンの珊瑚|ダーウィンの珊瑚]]』での主張です。
 > https://t.co/ujvo77mRG6
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1648274934614073344 (2023-04-18 19:39:02)
