--- a/content/📕言語の本質.md
+++ b/content/📕言語の本質.md
@@ -1,26 +1,28 @@
 ---
 tags: 
 aliases: 言語の本質
+title: 言語の本質
 ---
 
-![](https://www.chuko.co.jp/book/102756.jpg)
+![|300](https://www.chuko.co.jp/book/102756.jpg)
 
 題名：言語の本質—ことばはどう生まれ、進化したか
 著者：[[今井むつみ|今井むつみ]]／[[秋田喜美|秋田喜美]]
 
 > 日常生活の必需品であり、知性や芸術の源である言語。なぜヒトはことばを持つのか？　子どもはいかにしてことばを覚えるのか？　巨大システムの言語の起源とは？ヒトとＡＩや動物の違いは？　言語の本質を問うことは、人間とは何かを考えることである。鍵は、[[オノマトペ|オノマトペ]]と、[[アブダクション|アブダクション]]（仮説形成）推論という人間特有の学ぶ力だ。認知科学者と言語学者が力を合わせ、言語の誕生と進化の謎を紐解き、ヒトの根源に迫る。
 
-[** 目次]
- はじめに
- 第1章 オノマトペとは何か
- 第2章 アイコン性——形式と意味の類似性
- 第3章 オノマトペは言語
- 第4章 子どもの言語習得1——オノマトペ篇
- 第5章 言語の進化
- 第6章 子どもの言語習得2——アブダクション推論篇
- 第7章 ヒトと動物を分かつもの——推論と思考バイアス
- 終章 言語の本質
- あとがき／参考文献
+## 目次
+
+- はじめに
+- 第1章 オノマトペとは何か
+- 第2章 アイコン性——形式と意味の類似性
+- 第3章 オノマトペは言語
+- 第4章 子どもの言語習得1——オノマトペ篇
+- 第5章 言語の進化
+- 第6章 子どもの言語習得2——アブダクション推論篇
+- 第7章 ヒトと動物を分かつもの——推論と思考バイアス
+- 終章 言語の本質
+- あとがき／参考文献
 
 ## 参考
 
