--- a/content/シマアジの学名の語源.md
+++ b/content/シマアジの学名の語源.md
@@ -3,7 +3,7 @@
 2020年3月8日放送の[[鉄腕DASH]]でのこと
 
 > [!CITE] らぃりる (@Liriru) [March 8, 2020](https://twitter.com/Liriru/status/1236597625375166465)
-> 学名：最高においしい [\#鉄腕Dash](https://twitter.com/hashtag/%E9%89%84%E8%85%95Dash) ![pic.twitter.com/UOAYH3NkRU](https://pbs.twimg.com/media/ESlG6y7VAAU4WsZ?format=jpg)
+> 学名：最高においしい [\#鉄腕Dash](https://twitter.com/hashtag/%E9%89%84%E8%85%95Dash) ![pic.twitter.com/UOAYH3NkRU|300](https://pbs.twimg.com/media/ESlG6y7VAAU4WsZ?format=jpg)
 
 %%![[Pasted image 20240221202516.png|10]]%%
 
