Quartz sync: Feb 24, 2024, 12:58 AM

--- a/content/twitter_log/2021/2021_12.md
+++ b/content/twitter_log/2021/2021_12.md
@@ -56,7 +56,7 @@ tags: twitter_log
 > 文献調査は大事ですねという話です。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1466766009944387584 (2021-12-03 22:47:22)
-> 今思いついた可能性として、Kikuchi et al. (2021)が「直泳動物や二胚動物のデータは信用ならん」と考えて無視したということもあり得るだろうか。
+> 今思いついた可能性として、Kikuchi et al. (2021)が「[[直泳動物|直泳動物]]や[[二胚動物|二胚動物]]のデータは信用ならん」と考えて無視したということもあり得るだろうか。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1466767772508372992 (2021-12-03 22:54:22)
 > RT @n0rr: p.0032
@@ -66,7 +66,7 @@ tags: twitter_log
 > でも"any studied bilaterian animal"はかなり強めですよね。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1466771222948380672 (2021-12-03 23:08:05)
-> RT @moritami87: これはなぜかニコ百に書いてあるけど、芽殖孤虫症の死亡率にかんしてもちょっと言葉がつよめですね Kikuchi et al. (2021)
+> RT @moritami87: これはなぜか[[ニコニコ大百科|ニコ百]]に書いてあるけど、[[芽殖孤虫|芽殖孤虫症]]の死亡率にかんしてもちょっと言葉がつよめですね Kikuchi et al. (2021)
 > 
 > https://t.co/stWCjigrws
 
@@ -163,7 +163,8 @@ tags: twitter_log
 > 
 > そんなんProteobacteriaやないかい、緑膿菌であるPseudomonasはもう完全にProteobacteriaやがな
 > 
-> 俺もProteobacteriaやと思ってんけどな、オカ…
+> 俺もProteobacteriaやと思ってんけどな、オカンが言うには分類群の接尾語は、-otaになってた言うねんな
+> https://t.co/FN9ZaCV3D1
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1473988867925884928 (2021-12-23 21:08:26)
 > ICNPの話とNCBIの話とGTDBの話を混ぜたらそりゃややこしくもなるでしょう。
@@ -179,10 +180,10 @@ tags: twitter_log
 > ICNPが語尾を揃えなくちゃならないのもGTDBがタクソンを細分化しなくちゃならないのも、すべて分類階級なんて使ってるせいなんですよ。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1474037768376713216 (2021-12-24 00:22:44)
-> 星口動物に「せいこう」とルビが振ってあってちょっと嬉しい。
+> [[星口動物|星口動物]]に「せいこう」とルビが振ってあってちょっと嬉しい。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1474637948734042112 (2021-12-25 16:07:39)
-> RT @Tanaidologist: ”トランスクリプトームに基づく動吻動物（マッドドラゴン）門内の高次系統”；10科15属21種（18種が初）；382遺伝子212043アミノ酸配列；いくつかの属が非単系統；高次体系の更新 https://t.co/79GsfUkm39
+> RT @Tanaidologist: ”トランスクリプトームに基づく[[動吻動物|動吻動物]]（マッドドラゴン）門内の高次系統”；10科15属21種（18種が初）；382遺伝子212043アミノ酸配列；いくつかの属が非単系統；高次体系の更新 https://t.co/79GsfUkm39
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1474638622586720256 (2021-12-25 16:10:19)
 > 前から単系統群か怪しいと言われていた平蓋類を解体して、新たなクレードAnomoirhagaの提唱か。
