--- a/content/twitter_log/2023/2023_05.md
+++ b/content/twitter_log/2023/2023_05.md
@@ -29,7 +29,7 @@ tags: twitter_log
 > https://t.co/zllEiJ2cac
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1654819001942568960 (2023-05-06 21:02:49)
-> RT @hrk_book: Boyd御大のこの論文くそ長かったけどさすがに面白かった。自然種に関する帰納の正当化が（循環なしに）これでできているかは正味よくわからんけど、HPC説の文字通りの集大成といった感じ。
+> RT @hrk_book: Boyd御大のこの論文くそ長かったけどさすがに面白かった。自然種に関する帰納の正当化が（循環なしに）これでできているかは正味よくわからんけど、[[恒常的性質クラスター説|HPC説]]の文字通りの集大成といった感じ。
 > https://t.co/NUXn8RBQ2k
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1654819177176403968 (2023-05-06 21:03:31)
