--- a/content/twitter_log/2021/2021_11.md
+++ b/content/twitter_log/2021/2021_11.md
@@ -20,7 +20,7 @@ tags: twitter_log
 > https://t.co/OMsopROZ8f
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1455119258174717952 (2021-11-01 19:27:20)
-> 存在しなさ、たとえば『実在論と知識の自然化』によればHPC説は存在の程度が弱い自然種も認めるので、必ずしも自然種が単系統群である必要はないんだよな、とか。
+> 存在しなさ、たとえば『[[📕実在論と知識の自然化|実在論と知識の自然化]]』によれば[[恒常的性質クラスター説|HPC説]]は存在の程度が弱い自然種も認めるので、必ずしも自然種が単系統群である必要はないんだよな、とか。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1455119605161074688 (2021-11-01 19:28:43)
 > もちろんそれは人種が自然種となりうる可能性を秘めたものでもあるけども。
@@ -72,7 +72,7 @@ tags: twitter_log
 > 全然わからん…
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1455482550105743360 (2021-11-02 19:30:56)
-> 『水際の興亡史』は未読ですがコメントします。「「両生類」の定義が使えるか論争中」なのは「想像以上に多系統に分岐してたことが分かった」ことが主要因ではないものと思います。 https://t.co/qAYjppOWhR
+> 『[[📕水際の興亡史|水際の興亡史]]』は未読ですがコメントします。「「両生類」の定義が使えるか論争中」なのは「想像以上に多系統に分岐してたことが分かった」ことが主要因ではないものと思います。 https://t.co/qAYjppOWhR
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1455483293575434240 (2021-11-02 19:33:53)
 > 簡単に言えば「両生類」や「四足動物」という用語の使い方が変わったことが主な要因だと思われます。
@@ -113,7 +113,7 @@ tags: twitter_log
 > もちろん肺魚と分岐した後の陸上進出が複数回あった可能性は否定しないけども、その直接の影響は系統関係の復元を難しくすることにあって、「両生類」の定義に与える影響は間接的なものであるということ。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1.455492797537e+18 (2021-11-02 20:11:39)
-> 系統学的定義、素人が扱うにはあまりにも難しすぎる。
+> [[系統学的定義|系統学的定義]]、素人が扱うにはあまりにも難しすぎる。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1455493425369808896 (2021-11-02 20:14:09)
 > これが「分類が環世界センスからかけ離れてしまった」というやつなのか。
@@ -127,7 +127,7 @@ tags: twitter_log
 > https://t.co/6sCW2tD3fx
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1455712817496035328 (2021-11-03 10:45:56)
-> Horizontal emergenceがよく分からないな。同じHPCに入れる必要がいまいち掴めない。
+> Horizontal emergenceがよく分からないな。同じ[[恒常的性質クラスター説|HPC]]に入れる必要がいまいち掴めない。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1455713760560050176 (2021-11-03 10:49:41)
 > RT @ryoueharaS2: 『実在論と知識の自然化』が電子書籍化。自然種の一般理論として体系化された実在論を提示し、それを認識論に適用して知識の自然化を試みます。
