Quartz sync: Feb 24, 2024, 1:12 AM

--- a/content/芽殖孤虫のホメオボックス遺伝子は別に最小ではない.md
+++ b/content/芽殖孤虫のホメオボックス遺伝子は別に最小ではない.md
@@ -17,14 +17,14 @@
 
 しかし、[[芽殖孤虫]]の[[ホメオボックス遺伝子]]の数が「[[左右相称動物]]での最少値」というのは誤り
 - 芽殖孤虫よりも数が少ない左右相称動物がすでに報告されている
-    - [[二胚動物]]と[[直泳動物]]
-        - 芽殖孤虫などの[[条虫類]]と同様、高度な寄生性
+    - [[二胚動物]]と[[直泳動物]]　… 芽殖孤虫などの[[条虫類]]と同様、高度な寄生性
 
 | 動物門 | 種 | ホメオボックス遺伝子の数 | 出典 |
 | ---- | ---- | ---: | ---- |
 | 扁形動物 | *Sparganum proliferum* | 64 | Kikuchi et al. (2021) |
 | 直泳動物 | *Intoshia linei* | 51 | Mikhailov et al. (2016) |
 | 二胚動物 | *Dicyema* sp. 1 | 38 | Zverkov et al. (2019) |
+
 他にも、ゲノムデータではないが、[[珍無腸動物]]でも条虫と同程度にホメオボックス遺伝子が少ないことが示唆されている（Brauchle et al., 2018）
 
 なぜこのような誤りが生じてしまったのか？
