Quartz sync: Feb 24, 2024, 3:13 PM

--- a/content/twitter_log/2020/2020_04.md
+++ b/content/twitter_log/2020/2020_04.md
@@ -26,7 +26,7 @@ tags: twitter_log
 > いくつか引用しておきますね。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1248970675936563200 (2020-04-11 22:46:28)
-> [[📑Two empires or three?|Mayr (1998)]]
+> [[Two empires or three?|Mayr (1998)]]
 > "Woese uses the word domain, others have referred to it as superkingdom or empire. Being one step higher than kingdom, I like the term empire."
 > https://t.co/ZJy91EQnH1
 
