--- a/content/twitter_log/2020/2020_05.md
+++ b/content/twitter_log/2020/2020_05.md
@@ -147,7 +147,7 @@ tags: twitter_log
 > https://t.co/shqATen9ke
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1263088205428973568 (2020-05-20 21:44:29)
-> しかし、ここでいう「ドメイン」は[[📑Towards a natural system of organisms|Woese et al. (1990)]]のような分類階級としてではなく、あくまで生物の「進化段階」として記されています。
+> しかし、ここでいう「ドメイン」は[[Towards a natural system of organisms|Woese et al. (1990)]]のような分類階級としてではなく、あくまで生物の「進化段階」として記されています。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1.263088955056e+18 (2020-05-20 21:47:28)
 > さらに、Woese &amp; Fox (1977)でドメインと見なされているのは、
