--- a/content/twitter_log/2021/2021_11.md
+++ b/content/twitter_log/2021/2021_11.md
@@ -72,7 +72,7 @@ tags: twitter_log
 > 全然わからん…
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1455482550105743360 (2021-11-02 19:30:56)
-> 『[[📕水際の興亡史|水際の興亡史]]』は未読ですがコメントします。「「両生類」の定義が使えるか論争中」なのは「想像以上に多系統に分岐してたことが分かった」ことが主要因ではないものと思います。 https://t.co/qAYjppOWhR
+> 『[[『水際の興亡史』|水際の興亡史]]』は未読ですがコメントします。「「両生類」の定義が使えるか論争中」なのは「想像以上に多系統に分岐してたことが分かった」ことが主要因ではないものと思います。 https://t.co/qAYjppOWhR
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1455483293575434240 (2021-11-02 19:33:53)
 > 簡単に言えば「両生類」や「四足動物」という用語の使い方が変わったことが主な要因だと思われます。
