--- a/content/twitter_log/2022/2022_11.md
+++ b/content/twitter_log/2022/2022_11.md
@@ -209,7 +209,7 @@ tags: twitter_log
 > それはともかくとして、こういう論文が出てくれるのは本当にありがたい。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1592891421820063744 (2022-11-16 23:44:44)
-> [[📑Towards a natural system of organisms|Woese et al. (1990)]]以降、分類階級を追加しようとしたり、細胞生物とウイルスの分類体系を統合しようとしたりする試みはなかったわけではないけども、どれもぱっとしなかったわけで。この論文の提案が広く議論され（、さらには受容され）ればいいなと思う。
+> [[Towards a natural system of organisms|Woese et al. (1990)]]以降、分類階級を追加しようとしたり、細胞生物とウイルスの分類体系を統合しようとしたりする試みはなかったわけではないけども、どれもぱっとしなかったわけで。この論文の提案が広く議論され（、さらには受容され）ればいいなと思う。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1592895162044547072 (2022-11-16 23:59:35)
 > 論文中に"coarse-grained map"や"conceptual anchoring points"という表現が出てきたけども、私の「マイルストーンとしての分類階級」という考えと対応するようで嬉しい。
