--- a/content/twitter_log/2023/2023_03.md
+++ b/content/twitter_log/2023/2023_03.md
@@ -3,7 +3,7 @@ tags: twitter_log
 ---
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1633771174609158144 (2023-03-09 19:06:16)
-> 『われら古細菌の末裔』を読み終わった。進化史だけかと思いきや研究史もまとまっていて、自分にとってはとても勉強になった。
+> [[『われら古細菌の末裔』|『われら古細菌の末裔』]]を読み終わった。進化史だけかと思いきや研究史もまとまっていて、自分にとってはとても勉強になった。
 > https://t.co/emAwCqpjvp
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1633771685638991872 (2023-03-09 19:08:18)
