--- a/content/twitter_log/2023/2023_07.md
+++ b/content/twitter_log/2023/2023_07.md
@@ -5,7 +5,7 @@ tags: twitter_log
 > [!CITE] https://twitter.com/kaisekiriu/status/1674983779679764480 (2023-07-01 12:30:27)
 > RT @ChannelYurufuwa: 「キノコと植物、ヒトに近いのはどっち？」
 > 
-> クイズやマンガで進化のフシギにせまる⁉️[[📕ナゾとき「進化論」|ゆるふわでガチガチな本]]が生まれました‼️📔
+> クイズやマンガで進化のフシギにせまる⁉️[[『ナゾとき「進化論」』|ゆるふわでガチガチな本]]が生まれました‼️📔
 > 自然選択の仕組みから収斂進化、ミュラー型擬態、真社会性まで、身近でディープな #ゆるふわ生物学 の世界へようこそ🦖
 #ナゾとき進化論
 > 予約▶️https://amazon.co.jp/dp/4046060239/
@@ -120,10 +120,10 @@ tags: twitter_log
 > 「偶然？必然？」に「[[🎵U・N・M・E・I ライブ|どっちもだよ]]」と返す勇気。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1676529324617523200 (2023-07-05 18:51:54)
-> RT @gotshu: 今井／秋田『[[📕言語の本質|言語の本質]]』中公新書を読んだので、感想と気になったところを書きました。 #note https://t.co/cizwGH3L8n
+> RT @gotshu: 今井／秋田『[[『言語の本質』|言語の本質]]』中公新書を読んだので、感想と気になったところを書きました。 #note https://t.co/cizwGH3L8n
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1676529437821779968 (2023-07-05 18:52:21)
-> 『[[📕言語の本質|言語の本質]]』を読み終わったので参考として。
+> 『[[『言語の本質』|言語の本質]]』を読み終わったので参考として。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1676530350439424000 (2023-07-05 18:55:58)
 > 読み終えて真っ先に思ったのは「せっかく帯にブーツのイラストを描くんだったらベルト式じゃなくて紐付きブーツの方が良かったのでは？」みたいなこと。
@@ -363,7 +363,7 @@ tags: twitter_log
 > https://t.co/mNzQrscOnh
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1685964491497050112 (2023-07-31 19:43:53)
-> 『[[📕ナゾとき「進化論」|ナゾとき「進化論」]]』を読み終わりました。イラストが豊富で分かりやすいのはもちろんのこと、誤解されやすい事柄を含め細かな部分に目が行き届いた良書だと思いました。
+> 『[[『ナゾとき「進化論」』|ナゾとき「進化論」]]』を読み終わりました。イラストが豊富で分かりやすいのはもちろんのこと、誤解されやすい事柄を含め細かな部分に目が行き届いた良書だと思いました。
 > https://t.co/HIpapi80dJ
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1685964534950035456 (2023-07-31 19:44:03)
