--- a/content/ウーズの系統樹を引用するのはもう止めるべき.md
+++ b/content/ウーズの系統樹を引用するのはもう止めるべき.md
@@ -8,4 +8,4 @@
 - 引用元：[Woese (1987)](https://doi.org/10.1128/mr.51.2.221-271.1987)
 
 ![](https://scrapbox.io/files/61da436aa453b5001dd21595.png)
-- 引用元：[[📑Towards a natural system of organisms|Woese et al. (1990)]]
+- 引用元：[[Towards a natural system of organisms|Woese et al. (1990)]]
