--- a/content/書籍/『われら古細菌の末裔』.md
+++ b/content/書籍/『われら古細菌の末裔』.md
@@ -1,7 +1,6 @@
 ---
-tags: 
-aliases:
-title: われら古細菌の末裔
+tags: 書籍
+aliases: われら古細菌の末裔
 ---
 
 ![|300](https://hondana-image.s3.amazonaws.com/book/image/10025459/normal_ca0310f4-5dce-480f-8b8c-30d7f06b3645.jpg)
@@ -26,6 +25,6 @@ title: われら古細菌の末裔
 
 - pp. 23–29
     - [[三ドメイン説]]をめぐる[[カール・ウーズ]]と[[エルンスト・マイア]]の論争について、ウーズに肩入れしすぎであるように感じる
-    - [[📑Default taxonomy|Woese (1998)]]は、[[📑Two empires or three?|Mayr (1998)]]からの批判の一部をスルーしているので
+    - [[Default taxonomy|Woese (1998)]]は、[[Two empires or three?|Mayr (1998)]]からの批判の一部をスルーしているので
         - p. 9721の批判（本書でのp. 25の(6)の部分）
             - （"But Woese is not consistent in the adoption of these principles."）
