--- a/content/芽殖孤虫のホメオボックス遺伝子は別に最小ではない.md
+++ b/content/芽殖孤虫のホメオボックス遺伝子は別に最小ではない.md
@@ -13,11 +13,11 @@
 元論文（Kikuchi et al., 2021）の中でも同様のことが書かれている
 
 > [!CITE]
->The total numbers of homeobox domains identified in S. proliferum and S. erinaceieuropaei are 64 and 71, respectively, which are the most reduced of any studied bilaterian animal as these were fewer than in the cyclophyllids Echinococcus multilocularis and Taenia solium
+>The total numbers of homeobox domains identified in *S. proliferum* and *S. erinaceieuropaei* are 64 and 71, respectively, which are the most reduced of any studied bilaterian animal as these were fewer than in the cyclophyllids *Echinococcus multilocularis* and *Taenia solium*
 
 しかし、[[芽殖孤虫]]の[[ホメオボックス遺伝子]]の数が「[[左右相称動物]]での最少値」というのは誤り
 - 芽殖孤虫よりも数が少ない左右相称動物がすでに報告されている
-    - [[二胚動物]]と[[直泳動物]]　… 芽殖孤虫などの[[条虫類]]と同様、高度な寄生性
+    - [[二胚動物]]と[[直泳動物]] … 芽殖孤虫などの[[条虫類]]と同様、高度な寄生性
 
 | 動物門 | 種 | ホメオボックス遺伝子の数 | 出典 |
 | ---- | ---- | ---: | ---- |
