--- a/content/twitter_log/2020/2020_03.md
+++ b/content/twitter_log/2020/2020_03.md
@@ -16,7 +16,7 @@ tags: twitter_log
 > RT @k_ooi: @sakumad2003 @wormanago シマアジのシノニムにCaranx delicatissimus Döderlein, 1884というのがあるようなので、その種小名のことがテレビ局のスタッフに伝わるうちにおかしくなってしまったのではないかと思…
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1237014550098018304 (2020-03-09 22:57:06)
-> 『[[📕生命の〈系統樹〉はからみあう|生命の〈系統樹〉はからみあう]]』読みました。つらい。
+> 『[[『生命の〈系統樹〉はからみあう』|生命の〈系統樹〉はからみあう]]』読みました。つらい。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1237019983969828864 (2020-03-09 23:18:41)
 > 「結局のところ、このすばらしき新世紀は彼 [カール・ウーズ] の世紀ではなかったし、彼自身もそれを知っていた。」p.342
