Quartz sync: Mar 1, 2024, 7:47 PM

--- a/content/twitter_log/2020/2020_08.md
+++ b/content/twitter_log/2020/2020_08.md
@@ -201,7 +201,7 @@ tags: twitter_log
 > 忙しい中で研究者本人が参照しやすい形で情報をまとめてくれてるのは本当に頭が下がります。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1299897452355440640 (2020-08-30 11:31:18)
-> 『カモノハシの博物誌』を読了。進化の話はもちろん、「カモノハシ外交」の下りも面白かった（まさかチャーチルとカモノハシが繋がるとは）
+> [[『カモノハシの博物誌』|『カモノハシの博物誌』]]を読了。進化の話はもちろん、「カモノハシ外交」の下りも面白かった（まさかチャーチルとカモノハシが繋がるとは）
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1299899111798312960 (2020-08-30 11:37:53)
 > 重箱の隅も隅にはなってしまうが
