--- a/content/twitter_log/2023/2023_08.md
+++ b/content/twitter_log/2023/2023_08.md
@@ -142,7 +142,7 @@ tags: twitter_log
 > 先週から涙腺がガバガバになっているとはいえ、まさか「赤い世界が消える頃」で泣くことになるとは思わなかった。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1695770676005908736 (2023-08-27 21:10:09)
-> 実際に「ミシシッピ川西岸最後の雷馬」を読んでみた結果、多分この仮説は間違いっぽいなと思い直す。本文中で「雷馬」という単語が登場するのはたった1箇所だけだし。
+> 実際に[[「ミシシッピ川西岸最後の雷馬」|「ミシシッピ川西岸最後の雷馬」]]を読んでみた結果、多分この仮説は間違いっぽいなと思い直す。本文中で「雷馬」という単語が登場するのはたった1箇所だけだし。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1695774545431736576 (2023-08-27 21:25:32)
 > あとは第1幕視聴後に「サウンド・オブ・ビギニング」の歌詞がものすごく沁みるようになった、とか。
