--- a/content/twitter_log/2023/2023_09.md
+++ b/content/twitter_log/2023/2023_09.md
@@ -69,7 +69,7 @@ tags: twitter_log
 > RT @Plathelminthe4: Interesting (but not so surprising...). This new paper "proposes the demise of the traditionally recognized class Monog…
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1707716329640444416 (2023-09-29 20:17:55)
-> ミリオンライブ…
+> [[アイドルマスター ミリオンライブ！|ミリオンライブ]]…
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1707719870308388864 (2023-09-29 20:31:59)
 > #ミリアニネタバレ感想
