--- a/content/レッテルとしての今西進化論.md
+++ b/content/レッテルとしての今西進化論.md
@@ -1,6 +1,6 @@
  [[今西錦司]]
 
--  [[📕進化思考]]に対して
+-  [[『進化思考』]]に対して
     > [https://twitter.com/nabeso/status/1586333273319305216 @nabeso]
     > ゴミ箱じゃないので。＞今西進化論
     > https://twitter.com/GoITO/status/1551285456587071488
