--- a/content/自己家畜化.md
+++ b/content/自己家畜化.md
@@ -8,8 +8,8 @@
 
 ## 文献など
 
-- [[フランツ・ボアズ]] (1911) [📕The Mind of Primitive Man](https://en.wikipedia.org/wiki/The_Mind_of_Primitive_Man#cite_ref-boas1911_1-0)
-- リチャード・C・フランシス [[📕家畜化という進化]]
-- リチャード・ランガム [[📕善と悪のパラドックス]]
+- [[フランツ・ボアズ]] (1911) [The Mind of Primitive Man](https://en.wikipedia.org/wiki/The_Mind_of_Primitive_Man#cite_ref-boas1911_1-0)
+- リチャード・C・フランシス [[『家畜化という進化』]]
+- リチャード・ランガム [[『善と悪のパラドックス』]]
 	- 関連論文：https://doi.org/10.1017/ehs.2021.20
- - ブライアン・ヘア & ヴァネッサ・ウッズ [[📕ヒトは〈家畜化〉して進化した]]
+ - ブライアン・ヘア & ヴァネッサ・ウッズ [[『ヒトは〈家畜化〉して進化した』]]
