--- a/content/雷竜の語源は雷馬？.md
+++ b/content/雷竜の語源は雷馬？.md
@@ -20,7 +20,7 @@ tags:
 -  「雷竜という名称の由来は雷馬である」という話は、Pixiv百科事典の記事のほかには見当たらない
 - もしかすると[[ブロントテリウム]]の名称の由来の逸話と混同されているのかもしれない
 	- [The American Indians' mythical Thunder Horse was a Brontotherium – Historical articles and illustrationsHistorical articles and illustrations | Look and Learn](https://www.lookandlearn.com/blog/28075/the-american-indians-mythical-thunder-horse-was-a-brontotherium/)
- -  「ミシシッピ川西岸最後の雷馬（The Last Thunder Horse West of the Mississippi）」というSF小説は[[化石戦争]]の最中の[[竜脚類]]（雷竜）をめぐるフィクションなので、そこからの影響がある可能性も考えられる
+ -  [[「ミシシッピ川西岸最後の雷馬」]]というSF小説は[[化石戦争]]の最中の[[竜脚類]]（雷竜）をめぐるフィクションなので、そこからの影響がある可能性も考えられる
 	 - と考えて「ミシシッピ川西岸最後の雷馬」を読んだが、多分違う
 		 - 「雷竜」という単語が本文中で登場するのは1箇所だけなので
 
