Quartz sync: Mar 1, 2024, 7:52 PM

--- a/content/"柴犬はオオカミに一番近いイヌ"は誤解？.md
+++ b/content/"柴犬はオオカミに一番近いイヌ"は誤解？.md
@@ -1,4 +1,5 @@
-
+[[系統樹|系統樹]]や[[分岐図|分岐図]]を読み取る際にありがちな誤解を解説している部分は良いのだけれど
+どことなく的を外しているなというか、モヤモヤするところがあったので
 
 > [!CITE] [統合進化科学研究センター SOKENDAI](https://twitter.com/SOKENDAI_ESB/status/1762738259468399048)
 > 「柴犬は[[オオカミ|オオカミ]]に一番近いイヌ」という誤解が散見されますので、これについて解説します。
@@ -11,9 +12,6 @@
 > ![|200](https://pbs.twimg.com/media/GHaA7_sbQAAEHhW?format=jpg&name=4096x4096)
 
 %%![[Pasted image 20240301174432.png|10]]%%
-
-[[系統樹|系統樹]]や[[分岐図|分岐図]]を読み取る際にありがちな誤解を指摘しているのは良いのだけれど
-どことなく的を外しているなというか、モヤモヤするところがあったので
 
 このツイートの説明を整理すると次のようになる
 1. "柴犬はオオカミに一番近いイヌ"という言説が広まっている
