Quartz sync: Mar 1, 2024, 7:54 PM

--- a/content/"柴犬はオオカミに一番近いイヌ"は誤解？.md
+++ b/content/"柴犬はオオカミに一番近いイヌ"は誤解？.md
@@ -22,7 +22,7 @@
 そもそも②が正しいのかどうかが気に掛かるところ
 例えば「柴犬 オオカミ 近い」みたいなワードでGoogle検索をかけてみると、言及されているのは「系統的な近縁性」というよりもむしろ「遺伝子（おそらく正確にいうならゲノム）の類似性」の話がほとんど
 とりわけ[『ナショナルジオグラフィック』2012年2月号](https://natgeo.nikkeibp.co.jp/nng/article/20120120/296810/)に掲載されたグラフ（日本語版ではp. 41）がよく参照されている
-このグラフの出典として[Heidi D. Parker](https://www.genome.gov/staff/Heidi-G-Parker-PhD)がクレジットされている
+このグラフの出典として[Heidi G. Parker](https://www.genome.gov/staff/Heidi-G-Parker-PhD)がクレジットされている
 
 ナショジオのグラフは間違いなく[Parker et al. (2004)](https://doi.org/10.1126/science.1097406)のFig. 3Aの$K = 4$の部分が参照されている
 これは85犬種の集団構造を分析したもの
