Quartz sync: Mar 1, 2024, 7:55 PM

--- a/content/"柴犬はオオカミに一番近いイヌ"は誤解？.md
+++ b/content/"柴犬はオオカミに一番近いイヌ"は誤解？.md
@@ -29,7 +29,7 @@
 もちろん系統的な近縁性が云々という話ではない
 
 もちろん上記のツイートの図のような誤解が生じた場面がなかったとは言えないけれども
-それが"柴犬はオオカミに一番近いイヌ"という言説の拡散に与えた影響ってそこまであったのかな？というのが疑問
+それが"柴犬はオオカミに一番近いイヌ"という言説の拡散に与えた影響ってそこまであったのかな？という点が疑問
 むしろ
 "柴犬はオオカミに（ゲノム構成的に）一番近いイヌ"
 と説明されていたのが
