Quartz sync: Mar 4, 2024, 9:08 PM

--- a/content/twitter_log/2022/2022_06.md
+++ b/content/twitter_log/2022/2022_06.md
@@ -151,7 +151,7 @@ tags: twitter_log
 > Hyattの老齢説（old age theory）は間違いないとして、もう一つ、Haeckelが提唱したという"段階の法則"なるものの正体がつかめない。 https://t.co/W3rORbnBsS
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1533815086443528192 (2022-06-06 23:16:28)
-> Old age theoryはやはりGouldが『系統発生と個体発生』や『進化理論の構造』でまとめていた。
+> Old age theoryはやはりGouldが『系統発生と個体発生』や[[『進化理論の構造』|『進化理論の構造』]]でまとめていた。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1533816257199603712 (2022-06-06 23:21:07)
 > 段階の法則は1866年にHaeckelが設定したということで、たぶん『有機体の一般形態学』なのだろうけども、本当にそんなことを言ったのかどうかは確証が持てない。
