--- a/content/twitter_log/2023/2023_02.md
+++ b/content/twitter_log/2023/2023_02.md
@@ -66,7 +66,7 @@ tags: twitter_log
 > https://t.co/YiXirkURrw
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1623669787963592704 (2023-02-09 22:06:58)
-> 『哺乳類前史』を読み終えた。「繁栄していた単弓類はペルム紀末の大量絶滅以降その座を竜弓類に明け渡して…」みたいなことは一応教科書的に知っていたつもりだったけど、ここまで多様な姿と生態だったのには驚かされた。
+> [[『哺乳類前史』|『哺乳類前史』]]を読み終えた。「繁栄していた単弓類はペルム紀末の大量絶滅以降その座を竜弓類に明け渡して…」みたいなことは一応教科書的に知っていたつもりだったけど、ここまで多様な姿と生態だったのには驚かされた。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1623672049993662464 (2023-02-09 22:15:57)
 > 一番面白かったのは、中生代まで獣類（Theria）の多様化を抑え込んでいたのは恐竜ではなく、獣類以外の哺乳形類だったという考察（p. 353）。単弓類の生態的多様性を詳細に語られた上でこの考察を出されると納得せざるをえない。
