--- a/content/芽殖孤虫のホメオボックス遺伝子は別に最小ではない.md
+++ b/content/芽殖孤虫のホメオボックス遺伝子は別に最小ではない.md
@@ -1,9 +1,9 @@
 
-> [!INFO] 注意
-> この記事は、はてなブログで2021年12月3日に公開した記事と同様の内容のメモ書きである。
+> [!INFO] 
+> この記事は、はてなブログで2021年12月3日に公開した記事と同様の内容のメモ書きです
 > - [芽殖孤虫のホメオボックス遺伝子は別に最小ではない - 造物主の置手紙](https://kaisekiriu.hatenablog.com/entry/2021/12/03/223457)
 > 
-> このメモ書きは適宜修正される可能性がある。
+> このメモ書きは適宜修正される可能性があります
 
 ---
 
