--- a/content/twitter_log/2021/2021_12.md
+++ b/content/twitter_log/2021/2021_12.md
@@ -59,7 +59,7 @@ tags: twitter_log
 > 今思いついた可能性として、Kikuchi et al. (2021)が「[[直泳動物|直泳動物]]や[[二胚動物|二胚動物]]のデータは信用ならん」と考えて無視したということもあり得るだろうか。
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1466767772508372992 (2021-12-03 22:54:22)
-> RT @n0rr: p.0032
+> RT @n0rr: [[『進化理論の構造』|p.0032]]
 > "しかしその正しい名称は、進化生物学者がその修業時代の初日から意識的に除外した言葉を口にすることを要求する。つまり、あえてその名を口にしない概念、本質、本質、本質（恐怖が消し飛び、笑いが引っ込むまで何度かこの言葉を大声で叫んでみるがいい）"
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1466769274157297664 (2021-12-03 23:00:20)
