Quartz sync: Mar 20, 2024, 5:09 PM

--- a/content/自己家畜化.md
+++ b/content/自己家畜化.md
@@ -1,6 +1,9 @@
-- 他種による飼育などを介さずに、もっぱら自らの種内の社会的選択によって生じる[[家畜化]]（と同等の）現象
-	- ここでの「家畜化」はtameness（飼い慣らされた程度, 従順性; ≈ 反応的攻撃性の低下）を基準としたもの
-- 他種（非ヒト生物においては、特にヒト）の影響の度合いによって区別すべき（だと私は思う）
+
+self-domestication
+他種による飼育などを介さずに、もっぱら自らの種内の社会的選択によって生じる[[家畜化]]（と同等の）現象
+- ここでの「家畜化」はtameness（飼い慣らされた程度, 従順性; ≈ 反応的攻撃性の低下）を基準としたもの
+
+他種（非ヒト生物においては、特にヒト）の影響の度合いによって区別すべき（だと私は思う）
 - 自己家畜化を経験したと提唱されている生物
   - 他種の介在がない
 	- [[ヒト]]
