Quartz sync: Mar 21, 2024, 6:48 PM

--- a/content/『われら古細菌の末裔』.md
+++ b/content/『われら古細菌の末裔』.md
@@ -1,18 +1,25 @@
 ---
+title: 
+aliases: 
 tags: 書籍
-aliases: われら古細菌の末裔
+thumbnail: https://hondana-image.s3.amazonaws.com/book/image/10025459/normal_ca0310f4-5dce-480f-8b8c-30d7f06b3645.jpg
 ---
 
-![|300](https://hondana-image.s3.amazonaws.com/book/image/10025459/normal_ca0310f4-5dce-480f-8b8c-30d7f06b3645.jpg)
+| 書籍情報     | `= "!" + elink(this.thumbnail, "\|200")`           |
+| -------- | -------------------------------------------------- |
+| 題名       | われら古細菌の末裔—微生物から見た生物の進化                             |
+| 著者       | [[二井一禎]]                                           |
+| コーディナーター | [[左子芳彦]]                                           |
+| 出版年      |                                                    |
+| 出版社      | [[共立出版]]                                           |
+| ページ      |                                                    |
+| URL      | https://www.kyoritsu-pub.co.jp/book/b10025459.html |
+|          |                                                    |
 
- 題名：われら古細菌の末裔—微生物から見た生物の進化
- 著者：[[二井一禎]]
- コーディネーター：[[左子芳彦]]
- 出版社：[[共立出版]]
- https://www.kyoritsu-pub.co.jp/book/b10025459.html
 
 ## 概要
 
+> [!ABSTRACT]
 > 本書では、40億年の生命の歴史のうち、これまであまり取り上げられることがなかった、最初の30億年の微生物の時代の進化を主題として扱い、原核生物～真核生物の進化を一連のつながりのなかで解説する。
 > 
 > われわれ動物や植物の祖先として、[[真正細菌|細菌]]や[[アーキア|古細菌]]のような原核生物を想定して進化を考える人はほとんどいないだろう。いや、つい40年ほど前までは微生物学者でさえも、細菌の系統進化を他の大型の生物と同様の分類基準で捉えることなど不可能であると考えていた。このことを可能にしたのは、アメリカの微生物学者、[[カール・ウーズ|カール・ウーズ]]であるが、本書では、ウーズが成し遂げた偉大な業績を紹介し、その延長上で繰り広げられた真核生物の誕生をめぐる研究者たちの熱い議論を辿ることにより、進化を捉える新しい視点を提示する。
