--- a/content/『アナザー人類興亡史』.md
+++ b/content/『アナザー人類興亡史』.md
@@ -1,12 +1,17 @@
 ---
+title: 
+aliases: 
 tags: 書籍
-aliases:
+thumbnail: https://image.honto.jp/item/1/324/0340/6562/03406562_1.jpg
 ---
 
-![|200](https://image.honto.jp/item/1/324/0340/6562/03406562_1.jpg)
-
-
-- 題名：アナザー人類興亡史—人間になれずに消滅した“傍系人類”の系譜
-- シリーズ：知りたい！サイエンスシリーズ
-- 著者：[[金子隆一]]
-- 出版社：[[技術評論社]]
+| 書籍情報 | `= "!" + elink(this.thumbnail, "\|200")` |
+| ---- | ---------------------------------------- |
+| 題名   | アナザー人類興亡史—人間になれずに消滅した“傍系人類”の系譜           |
+| 著者   | [[金子隆一]]                                 |
+| 翻訳者  |                                          |
+| 出版年  |                                          |
+| 出版社  | [[技術評論社]]                                |
+| シリーズ | 知りたい！サイエンスシリーズ                           |
+| ページ  |                                          |
+| URL  |                                          |
