--- a/content/『生命の〈系統樹〉はからみあう』.md
+++ b/content/『生命の〈系統樹〉はからみあう』.md
@@ -1,9 +1,19 @@
 ---
-tags: 
+title: 
 aliases: 生命の〈系統樹〉はからみあう
+tags: 書籍
+thumbnail: https://www.hanmoto.com/bd/img/9784861827969_600.jpg
 ---
 
-![|300](https://www.hanmoto.com/bd/img/9784861827969_600.jpg)
+| 書籍情報 | `= "!" + elink(this.thumbnail, "\|200")` |
+| ---- | ---------------------------------------- |
+| 題名   |                                          |
+| 著者   |                                          |
+| 翻訳者  |                                          |
+| 出版年  |                                          |
+| 出版社  |                                          |
+| ページ  |                                          |
+| URL  |                                          |
 
  - 題名：生命の〈系統樹〉はからみあう—ゲノムに刻まれたまったく新しい進化史
  - 原題：The Tangled Tree: A Radical New History of Life
