Quartz sync: Mar 23, 2024, 2:23 PM

--- a/content/『言語の本質』.md
+++ b/content/『言語の本質』.md
@@ -10,7 +10,7 @@ modified: 2024-03-23T14:22
 | 書籍情報 | ![[Pasted image 20240323142202.png\|200]]           |
 | ---- | --------------------------------------------------- |
 | 題名   | 言語の本質—ことばはどう生まれ、進化したか                               |
-| 著者   | [[今井むつみ\|今井むつみ]]／[[秋田喜美\|秋田喜美]]                     |
+| 著者   | [[今井むつみ\|今井むつみ]], [[秋田喜美\|秋田喜美]]                    |
 | レーベル | [[中公新書]]                                            |
 | 出版社  | [[中央公論新社]]                                          |
 | ページ  | 296                                                 |
