Quartz sync: Mar 28, 2024, 10:14 PM

--- a/content/twitter_log/1584049934437060614.md
+++ b/content/twitter_log/1584049934437060614.md
@@ -5,4 +5,4 @@ tags: twitter_log
 
 > [!CITE] https://twitter.com/kaisekiriu/status/1584049934437060614 (2022-10-23 14:11:49)
 > ![](https://twitter.com/kaisekiriu/status/1584049934437060614)
-> 「ヴィーガンの源流はジャイナ教」というのは「進化理論の源流はアナクシマンドロス」と同じような語り口よね。
+> 「[[ヴィーガニズム|ヴィーガン]]の源流は[[ジャイナ教|ジャイナ教]]」というのは「[[進化理論|進化理論]]の源流は[[アナクシマンドロス|アナクシマンドロス]]」と同じような語り口よね。
